deploy: 3e294c980f172435bdd664646a8e1434a3ff9e6d

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:site_name" content="Sean’s Python Explorations" />
 <meta property="og:image" content="https://seansummers.github.io/python-explorations/images/logo.png" />
 <script type="application/ld+json">
-{"url":"https://seansummers.github.io/python-explorations/","@type":"WebSite","headline":"Sean’s Python Explorations","image":"https://seansummers.github.io/python-explorations/images/logo.png","name":"Sean’s Python Explorations","description":"Explorations of a mostly python nature…","@context":"https://schema.org"}</script>
+{"headline":"Sean’s Python Explorations","url":"https://seansummers.github.io/python-explorations/","@type":"WebSite","image":"https://seansummers.github.io/python-explorations/images/logo.png","name":"Sean’s Python Explorations","description":"Explorations of a mostly python nature…","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/python-explorations/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://seansummers.github.io/python-explorations/feed.xml" title="Sean's Python Explorations" /><link rel="shortcut icon" type="image/x-icon" href="/python-explorations/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /><script src="https://hypothes.is/embed.js" async></script>
