--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://seansummers.github.io/python-explorations/404.html" />
 <meta property="og:site_name" content="Sean’s Python Explorations" />
 <script type="application/ld+json">
-{"headline":"Sean’s Python Explorations","url":"https://seansummers.github.io/python-explorations/404.html","@type":"WebPage","description":"Explorations of a mostly python nature…","@context":"https://schema.org"}</script>
+{"url":"https://seansummers.github.io/python-explorations/404.html","@type":"WebPage","headline":"Sean’s Python Explorations","description":"Explorations of a mostly python nature…","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/python-explorations/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://seansummers.github.io/python-explorations/feed.xml" title="Sean's Python Explorations" /><link rel="shortcut icon" type="image/x-icon" href="/python-explorations/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /><script src="https://hypothes.is/embed.js" async></script>
@@ -107,7 +107,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/seansummers" title="seansummers"><svg class="svg-icon grey"><use xlink:href="/python-explorations/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/seansummers" title="seansummers"><svg class="svg-icon grey"><use xlink:href="/python-explorations/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/seansummers" target="_blank" title="seansummers"><svg class="svg-icon grey"><use xlink:href="/python-explorations/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/seansummers" target="_blank" title="seansummers"><svg class="svg-icon grey"><use xlink:href="/python-explorations/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
